<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iHomeo</string>
    <string name="version">V1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password">PASSWORD :</string>
    <string name="user_id">USER ID :</string>
    <string name="login">LOGIN</string>
    <string name="doctor_names">Doctor Names</string>
    <string name="time">TIME</string>
    <string name="patient">PATIENT</string>
    <string name="close">CLOSE</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="name">  NAME</string>
    <string name="mobile">MOBILE</string>
    <string name="consultation_fee">CONSULTATION FEE</string>
    <string name="pharmacy_fee">PHARMACY FEE</string>
    <string name="total_fee">TOTAL FEE</string>
    <string name="back">BACK</string>
    <string name="confirm">CONFIRM</string>
    <string name="create_as_new">CREATE AS NEW</string>
    <string name="existing_patients">Existing Patients</string>
    <string name="cancel">CANCEL</string>
    <string name="set">SET</string>
    <string name="period">Period</string>
    <string name="no_of_bills">No. Of Bills</string>
    <string name="amount">Amount</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="opd">OPD</string>
    <string name="pharmacy">PHARMACY</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="book">BOOK</string>
    <string name="arrived">ARRIVED</string>
    <string name="pay">PAY</string>



        <string-array name="planets_array">
            <item>Mercury</item>
            <item>Venus</item>
            <item>Earth</item>
            <item>Mars</item>
            <item>Jupiter</item>
            <item>Saturn</item>
            <item>Uranus</item>
            <item>Neptune</item>
        </string-array>

    </resources>