<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_payment_dialog"
            style="@style/DialogSubHeader_Text"
            android:text="Bill payment" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/consultation_fee_payment_dialog"
            style="@style/CustomTextview"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/consultation_fee" />

        <TextView
            android:id="@+id/consultation_fee_txv_payment_dialog"
            style="@style/DialogConsultation_Text"
            android:layout_alignBaseline="@id/consultation_fee_payment_dialog"

            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:text="0.00" />

        <TextView
            android:id="@+id/pharmacy_fee_title_txv_payment_dialog"
            style="@style/CustomTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/consultation_fee_payment_dialog"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/pharmacy_fee" />

        <EditText
            android:id="@+id/pharmacy_fee_edt_payment_dialog"
            style="@style/DialogEdittext"
            android:layout_alignBaseline="@+id/pharmacy_fee_title_txv_payment_dialog"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/consultation_fee_payment_dialog"
            android:ems="10"
            android:gravity="right"
            android:hint="0.00"
            android:inputType="number" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sum_title_txv_payment_dialog"
            style="@style/CustomTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/total_fee" />

        <TextView
            android:id="@+id/sum_payment_dialog"
            style="@style/DialogSubHeader_Text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="0.00" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/cancel_btn_payment_dialog"
            style="@style/DialogDownButtons"
            android:layout_toLeftOf="@+id/view_divider"
            android:text="@string/cancel" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/confirm_btn_payment_dialog"
            style="@style/DialogDownButtons"
            android:layout_toRightOf="@+id/view_divider"
            android:text="@string/confirm" />


    </RelativeLayout>

</LinearLayout>
