<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!-- layout title -->

    <LinearLayout
        android:id="@+id/headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_title_appointments_dialog"

            style="@style/DialogMainHeader_Text"
            android:text="10.30-11.30" />

        <TextView
            android:id="@+id/date_title_appointments_dialog"
            style="@style/DialogSubHeader_Text"
            android:text="Wed" />

        <View style="@style/DialogView" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/mobile_txv_appointments_dialog"
            style="@style/CustomTextview"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:text="@string/mobile" />

        <EditText

            android:id="@+id/mobile_edt_appointments_dialog"
            style="@style/DialogEdittext"
            android:layout_alignBaseline="@id/mobile_txv_appointments_dialog"
            android:layout_alignParentRight="@id/mobile_txv_appointments_dialog"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/mobile_txv_appointments_dialog"
            android:hint="Enter mobile # here"
            android:maxLength="10"
            android:inputType="number" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name_txv_appointments_dialog"
            style="@style/CustomTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/mobile_txv_appointments_dialog"
            android:layout_below="@id/mobile_txv_appointments_dialog"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_edt_appointments_dialog"
            style="@style/DialogEdittext"
            android:layout_alignBaseline="@+id/name_txv_appointments_dialog"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/name_txv_appointments_dialog"
            android:ems="10"
            android:hint="Enter name here"
            android:inputType="textCapSentences" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/back_btn_appointments_dialog"
            style="@style/DialogDownButtons_1"
            android:layout_toLeftOf="@+id/view_divider"
            android:text="@string/back" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/confirm_btn_appointments_dialog"
            style="@style/DialogDownButtons"
            android:layout_toRightOf="@+id/view_divider"
            android:text="@string/confirm" />


    </RelativeLayout>


</LinearLayout>